<?xml version="1.0"?>
<package format="2">
  <name>wolf_demo_apriltag_imu</name>
  <version>0.0.0</version>
  <description>The wolf_demo_apriltag_imu package</description>

  <maintainer email="joanvallve@iri.upc.edu">joanvallve</maintainer>

  <license>BSD2</license>

  <build_depend>wolf_ros_vision</build_depend>
  <build_depend>wolf_ros_apriltag</build_depend>
  <build_depend>wolf_ros_imu</build_depend>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
